<resources>
    <string name="app_name">Asteroid Radar</string>
    <string name="close_approach_date_title">Close Approach Date</string>
    <string name="absolute_magnitude_title">Absolute Magnitude</string>
    <string name="estimated_diameter_title">Estimated Diameter</string>
    <string name="relative_velocity_title">Relative Velocity</string>
    <string name="distance_from_earth_title">Distance From Earth</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="astronomical_unit_explanation_posivite_button">Got It!</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
</resources>